force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/cgcloud__Promotion_Reward_Group__c.object-meta.xml
<CustomObject>
    <description>This object holds the details of reward group assigned to a promotion.</description>
    <label>Promotion Reward Group</label>
    <nameField>
        <displayFormat>PRG-{00000}</displayFormat>
        <label>Promotion Reward Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Reward Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>