force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/fields/cgcloud__Count_Hurdles__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Count_Hurdles__c</fullName>
    <description>Count of promotion hurdles with &apos;Reward Group-Specific&apos; Record Type.</description>
    <inlineHelpText>Defines the number of &apos;Reward Group-Specific&apos; Hurdles.</inlineHelpText>
    <label>Count Hurdles</label>
    <summaryFilterItems>
        <field>cgcloud__Promotion_Hurdle__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Reward Group-Specific</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Promotion_Hurdle__c.cgcloud__Promotion_Reward_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>