force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/fields/cgcloud__Count_Rewards__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Count_Rewards__c</fullName>
    <description>Count of promotion rewards.</description>
    <label>Count Rewards</label>
    <summaryForeignKey>cgcloud__Promotion_Reward__c.cgcloud__Promotion_Reward_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>