force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/fields/cgcloud__Description_Language_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Language_1__c</fullName>
    <description>Holds the description of language 1.</description>
    <inlineHelpText>Defines BBCode text that can be maintained to display bold text.</inlineHelpText>
    <label>Description Language 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>