force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/fields/cgcloud__Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the promotion that the Reward Group is linked to.</description>
    <label>Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Reward Groups</relationshipLabel>
    <relationshipName>Promotion_Reward_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>