force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/fields/cgcloud__Reward_Multiplicity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reward_Multiplicity__c</fullName>
    <description>Defines the number of rewards that can be selected in mobility if conditions are fulfilled.</description>
    <inlineHelpText>Defines the number of rewards that can be selected in mobility if conditions are fulfilled.</inlineHelpText>
    <label>Reward Multiplicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Up to One</label>
            </value>
            <value>
                <fullName>n</fullName>
                <default>true</default>
                <label>Zero or More</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>