force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/validationRules/cgcloud__Consider_Promo_Rew_must_be_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Consider_Promo_Rew_must_be_checked</fullName>
    <active>true</active>
    <description>Reward Group can&apos;t be added if the Consider Promotion Rewards on Promotion Template is unchecked.</description>
    <errorConditionFormula>cgcloud__Promotion__r.cgcloud__Promotion_Template__r.cgcloud__Consider_Promotion_Rewards__c == FALSE</errorConditionFormula>
    <errorMessage>Reward Group can&apos;t be added if the Consider Promotion Rewards on Promotion Template is unchecked.</errorMessage>
</ValidationRule>