force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/validationRules/cgcloud__Prom_Rew_Group_cannot_be_added_or_update.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prom_Rew_Group_cannot_be_added_or_update</fullName>
    <active>false</active>
    <description>Promotion Reward Groups can&apos;t be added or edited if the Promotion Phase is &apos;Committed&apos;.</description>
    <errorConditionFormula>AND(cgcloud__Promotion__r.cgcloud__Promotion_Template__r.cgcloud__Consider_Promotion_Rewards__c == TRUE, 
				ISPICKVAL(cgcloud__Promotion__r.cgcloud__Phase__c, &apos;Committed&apos;))</errorConditionFormula>
    <errorMessage>Promotion Reward Groups can&apos;t be added or edited if the Promotion Phase is &apos;Committed&apos;.</errorMessage>
</ValidationRule>