force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/validationRules/cgcloud__Restrict_Edit_Promotion.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Restrict_Edit_Promotion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED( cgcloud__Promotion__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Promotion__c</errorDisplayField>
    <errorMessage>The Promotion can&apos;t be edited after Product Reward Group creation.</errorMessage>
</ValidationRule>