force-app/main/default/objects/cgcloud__Promotion_Reward_Group__c/validationRules/cgcloud__Sales_Org_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_cannot_be_changed</fullName>
    <active>true</active>
    <description>The Sales Org can&apos;t be edited after Product Reward Group creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(cgcloud__Sales_Org__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Sales_Org__c</errorDisplayField>
    <errorMessage>The Sales Org can&apos;t be edited after Product Reward Group creation.</errorMessage>
</ValidationRule>